Fix to ensure tooltip is always visible over other controls

--- a/DoctorWhoRatings.WebClient/Components/Shared/Chart.razor.css
+++ b/DoctorWhoRatings.WebClient/Components/Shared/Chart.razor.css
@@ -1,4 +1,6 @@
 ﻿section {
+    position: relative;
+    z-index: 1;
     height: 570px;
     background: #f0f0f0;
     color: #000000;
